vercel instructions for static file route

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
     "version": 2,
-    "rewrites": [
-      { "source": "/api/(.*)", "destination": "/api/index.py" }
+    "builds": [
+      { "src": "api/index.py", "use": "@vercel/python" },
+      { "src": "index.html", "use": "@vercel/static" }
+    ],
+    "routes": [
+      { "src": "/api/(.*)", "dest": "/api/index.py" },
+      { "src": "/(.*\\.(html|css|js|ico|png|jpg|svg))?$", "dest": "/index.html" },
+      { "src": "/", "dest": "/index.html" }
     ]
   }
